# reapyr

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/actions/init/: action.yml
.github/workflows/: ci.yml
reapyr/: __init__.py  __main__.py
scripts/: ci
tests/: test__init__.py
