[tool.poetry]
name = "reapyr"
version = "0.0.0"
description = ""
authors = ["Karl Kroening <karlk@kralnet.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ipython = "^8.23.0"
isort = {extras = ["colors"], version = "^5.13.2"}
mock = "^5.1.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-faker = "^2.0.0"
pytest-mock = "^3.14.0"
pytest-only = "^2.1.1"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.5.0"
types-mock = "^5.1.0.20240311"
types-pygments = "^2.17.0.20240310"
pytest-factoryboy = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '^/(reapyr|tests)/.*\.pyi?$'
skip-string-normalization = true
target_version = ['py311']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = true
ignore_whitespace = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
no_sections = true
use_parentheses = true

[tool.mypy]
extra_checks = true
files = 'reapyr'
mypy_path = 'stubs'
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = '--pdbcls=IPython.terminal.debugger:Pdb'
filterwarnings = [
    "error::pytest.PytestUnhandledCoroutineWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
    "error::RuntimeWarning",
    # "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning:pytest_freezegun",
]
asyncio_mode = 'auto'
markers = []
timeout = 5
